--- a/style.css
+++ b/style.css
@@ -98,5 +98,6 @@ header p
 canvas {
 	width: 100%;
 	height: 100%;
-	background: black;
+	background-image: url("https://c1.wallpaperflare.com/preview/1002/922/406/blue-bubbles-underwater-water.jpg");
+	background-size:cover;
 }
