--- a/style.css
+++ b/style.css
@@ -98,6 +98,6 @@ header p
 canvas {
 	width: 100%;
 	height: 100%;
-	background-image: url("https://c1.wallpaperflare.com/preview/1002/922/406/blue-bubbles-underwater-water.jpg");
+	background-image: url("https://c1.wallpaperflare.com/preview/1002/922/406/blue-bubbles-underwater-water.jpg");//changed canvas
 	background-size:cover;
 }
