--- a/style.css
+++ b/style.css
@@ -6,10 +6,11 @@
 body
 {
     font-family: 'Montserrat', sans-serif;
-    background-image: url("https://encrypted-tbn0.gstatic.com/images?q=tbn%3AANd9GcQH3v0eKBwaFSzt4TcAwO8assGI1mqze6ebrDtxUwKMGTW7x38Z");
+    background-image: url("./images/back.gif");
     background-repeat: no-repeat;
     background-size: cover;
 }
+
 .app
 {
     height: 100vh;
@@ -30,17 +31,69 @@ header p
     font-size: 20px;
     color: aqua;
 }
+#text {
+    font-size: 30px;
+    color: aqua;
+    text-align: center;
+}
+#textc {
+    font-size: 70px;
+    color: aqua;
+    text-align: center;
+    display: none;
+}
+#textw {
+    font-size: 70px;
+    color: aqua;
+    text-align: center;
+    display: none;
+}
+.type {
+    height: 50px;
+    width: 120px;
+    background-color: red;
+    border: 2px solid black;
+    border-radius: 25px;
+    color: black;
+    text-align: center;
+    padding-top: 12px;
+}
+.type:hover {
+    cursor: pointer;
+    border: 3px solid black;
+    color: white;
+}
 .pads
 {
     width: 100%;
-    display: flex;
+    border-top: 2px solid black;
+    border-bottom: 2px solid black;
+    border-left: 2px solid black;
+    display: none;
+}
+.pads:hover {
+    cursor: pointer;
+}
+#notes {
+    height: 90px;
+    width: 90px;
+    display: none;
 }
 /* Down below selects all the divs inside pads */
 .pads > div
 {
     height: 100px;
     width:  100px;
+    border-right: 2px solid black;
+    -moz-box-shadow:    inset 0 0 0px #000000;
+    -webkit-box-shadow: inset 0 0 0px #000000;
+    box-shadow:         inset 0 0 0px #000000;
     flex: 1;
+}
+.pads > div:hover {
+    -moz-box-shadow:    inset 0 0 20px #000000;
+    -webkit-box-shadow: inset 0 0 20px #000000;
+    box-shadow:         inset 0 0 20px #000000;
 }
 .pad1
 {
@@ -66,7 +119,14 @@ header p
 {
     background: #e60808;
 }
-
+.pad7
+{
+    background: #29d657;
+}
+.pad8
+{
+    background: #ed5807;
+}
 @keyframes jump
 {
     0%
@@ -93,10 +153,4 @@ header p
     border-radius: 50%;
     bottom: 0%;
     z-index: -1;
-}
-
-canvas {
-	width: 100%;
-	height: 100%;
-	background: black;
 }
